update scalar api response
